k8s/tls_example/ingress-service.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "visulate-for-oracle-ingress2"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 34.107.221.54
    networking.gke.io/managed-certificates: demo3-visulate-net-certificate
spec:
  backend:
    serviceName: "visulate-for-oracle-client"
    servicePort: 80
  rules:
    - http:
        paths:
          - path: "/api/*"
            backend:
              serviceName: "visulate-for-oracle"
              servicePort: 3000
          - path: "/find/*"
            backend:
              serviceName: "visulate-for-oracle"
              servicePort: 3000
          - path: "/ddl/*"
            backend:
              serviceName: "visulate-for-oracle"
              servicePort: 3000                 
          - path: "/database/*"
            backend:
              serviceName: "visulate-for-oracle-client"
              servicePort: 80
